[gd_scene load_steps=3 format=3 uid="uid://beccdhjgbdppi"]

[ext_resource type="Script" path="res://Scripts/ajustes.gd" id="1_dtxbi"]

[sub_resource type="CanvasTexture" id="CanvasTexture_fu7mr"]
specular_color = Color(0.591423, 0.67124, 0.0730327, 1)

[node name="Ajustes" type="Node2D"]
position = Vector2(2, 0)
script = ExtResource("1_dtxbi")

[node name="Fondo" type="Sprite2D" parent="."]
modulate = Color(0.890196, 0.894118, 1, 1)
position = Vector2(348.75, 178.75)
scale = Vector2(698.5, 358.5)
texture = SubResource("CanvasTexture_fu7mr")

[node name="BotonVolver" type="Button" parent="."]
offset_left = 262.0
offset_top = 287.0
offset_right = 419.0
offset_bottom = 318.0
text = "Volver"

[node name="Contenedor" type="VBoxContainer" parent="."]
offset_left = 86.0
offset_top = 32.0
offset_right = 252.0
offset_bottom = 266.0

[node name="General" type="Label" parent="Contenedor"]
modulate = Color(0.0846899, 0.0846899, 0.0846899, 1)
layout_mode = 2
text = "Volumen general"

[node name="ContGeneral" type="HBoxContainer" parent="Contenedor"]
layout_mode = 2

[node name="HSliderGeneral" type="HSlider" parent="Contenedor/ContGeneral"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="NivelGeneral" type="Label" parent="Contenedor/ContGeneral"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Musica" type="Label" parent="Contenedor"]
modulate = Color(0.0846899, 0.0846899, 0.0846899, 1)
layout_mode = 2
text = "Volumen musica"

[node name="ContMusica" type="HBoxContainer" parent="Contenedor"]
layout_mode = 2

[node name="HSliderMusic" type="HSlider" parent="Contenedor/ContMusica"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="NivelMusica" type="Label" parent="Contenedor/ContMusica"]
layout_mode = 2

[node name="Enemigos" type="Label" parent="Contenedor"]
modulate = Color(0.0846899, 0.0846899, 0.0846899, 1)
layout_mode = 2
text = "Volumen enemigos"

[node name="ContEnemigos" type="HBoxContainer" parent="Contenedor"]
layout_mode = 2

[node name="HSliderEnemigos" type="HSlider" parent="Contenedor/ContEnemigos"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="NivelEnemigos" type="Label" parent="Contenedor/ContEnemigos"]
layout_mode = 2

[node name="Teclas" type="Button" parent="Contenedor"]
layout_mode = 2
text = "Cambiar teclas 
por defecto"

[connection signal="pressed" from="BotonVolver" to="." method="_on_boton_volver_pressed"]
[connection signal="value_changed" from="Contenedor/ContGeneral/HSliderGeneral" to="." method="_on_h_slider_general_value_changed"]
[connection signal="value_changed" from="Contenedor/ContMusica/HSliderMusic" to="." method="_on_h_slider_music_value_changed"]
[connection signal="value_changed" from="Contenedor/ContEnemigos/HSliderEnemigos" to="." method="_on_h_slider_enemigos_value_changed"]
[connection signal="pressed" from="Contenedor/Teclas" to="." method="_on_teclas_pressed"]
